syntax = "proto3";

message SingleSelectTypeOption {
    repeated SelectOption options = 1;
    bool disable_color = 2;
}
message MultiSelectTypeOption {
    repeated SelectOption options = 1;
    bool disable_color = 2;
}
message SelectOption {
    string id = 1;
    string name = 2;
    SelectOptionColor color = 3;
}
enum SelectOptionColor {
    Purple = 0;
    Pink = 1;
    LightPink = 2;
    Orange = 3;
    Yellow = 4;
    Lime = 5;
    Green = 6;
    Aqua = 7;
    Blue = 8;
}
